kk_2018_06/vezbanje_vol_2/parser.output
Terminals unused in grammar

    id_liste_token


Grammar

    0 $accept: Program $end

    1 Program: Program Funkcija
    2        | Funkcija

    3 Funkcija: id_token '(' Args ')' Blok

    4 Args: NizArgumenata
    5     | %empty

    6 NizArgumenata: NizArgumenata ',' id_token
    7              | id_token

    8 Blok: '{' NizNaredbi '}'

    9 NizNaredbi: NizNaredbi ';' Naredba
   10           | Naredba

   11 Naredba: print_token E
   12        | set_token id_token to_token E

   13 E: E and_token E
   14  | E or_token E
   15  | E xor_token E
   16  | not_token E
   17  | E shl_token E
   18  | E shr_token E
   19  | num_token
   20  | '(' E ')'
   21  | id_token
   22  | PozivFje

   23 PozivFje: call_token id_token '(' NizE ')'
   24         | call_token id_token '(' ')'

   25 NizE: NizE ',' E
   26     | E


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 20 23 24
    ')' (41) 3 20 23 24
    ',' (44) 6 25
    ';' (59) 9
    '{' (123) 8
    '}' (125) 8
    error (256)
    num_token <u> (258) 19
    id_token <s> (259) 3 6 7 12 21 23 24
    id_liste_token <s> (260)
    call_token (261) 23 24
    print_token (262) 11
    and_token (263) 13
    or_token (264) 14
    xor_token (265) 15
    not_token (266) 16
    shl_token (267) 17
    shr_token (268) 18
    set_token (269) 12
    to_token (270) 12


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    Program <e> (23)
        on left: 1 2
        on right: 0 1
    Funkcija <e> (24)
        on left: 3
        on right: 1 2
    Args <v1> (25)
        on left: 4 5
        on right: 3
    NizArgumenata <v1> (26)
        on left: 6 7
        on right: 4 6
    Blok <e> (27)
        on left: 8
        on right: 3
    NizNaredbi <v> (28)
        on left: 9 10
        on right: 8 9
    Naredba <e> (29)
        on left: 11 12
        on right: 9 10
    E <e> (30)
        on left: 13 14 15 16 17 18 19 20 21 22
        on right: 11 12 13 14 15 16 17 18 20 25 26
    PozivFje <e> (31)
        on left: 23 24
        on right: 22
    NizE <v> (32)
        on left: 25 26
        on right: 23 25


State 0

    0 $accept: . Program $end

    id_token  shift, and go to state 1

    Program   go to state 2
    Funkcija  go to state 3


State 1

    3 Funkcija: id_token . '(' Args ')' Blok

    '('  shift, and go to state 4


State 2

    0 $accept: Program . $end
    1 Program: Program . Funkcija

    $end      shift, and go to state 5
    id_token  shift, and go to state 1

    Funkcija  go to state 6


State 3

    2 Program: Funkcija .

    $default  reduce using rule 2 (Program)


State 4

    3 Funkcija: id_token '(' . Args ')' Blok

    id_token  shift, and go to state 7

    $default  reduce using rule 5 (Args)

    Args           go to state 8
    NizArgumenata  go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: Program Funkcija .

    $default  reduce using rule 1 (Program)


State 7

    7 NizArgumenata: id_token .

    $default  reduce using rule 7 (NizArgumenata)


State 8

    3 Funkcija: id_token '(' Args . ')' Blok

    ')'  shift, and go to state 10


State 9

    4 Args: NizArgumenata .
    6 NizArgumenata: NizArgumenata . ',' id_token

    ','  shift, and go to state 11

    $default  reduce using rule 4 (Args)


State 10

    3 Funkcija: id_token '(' Args ')' . Blok

    '{'  shift, and go to state 12

    Blok  go to state 13


State 11

    6 NizArgumenata: NizArgumenata ',' . id_token

    id_token  shift, and go to state 14


State 12

    8 Blok: '{' . NizNaredbi '}'

    print_token  shift, and go to state 15
    set_token    shift, and go to state 16

    NizNaredbi  go to state 17
    Naredba     go to state 18


State 13

    3 Funkcija: id_token '(' Args ')' Blok .

    $default  reduce using rule 3 (Funkcija)


State 14

    6 NizArgumenata: NizArgumenata ',' id_token .

    $default  reduce using rule 6 (NizArgumenata)


State 15

   11 Naredba: print_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 24
    PozivFje  go to state 25


State 16

   12 Naredba: set_token . id_token to_token E

    id_token  shift, and go to state 26


State 17

    8 Blok: '{' NizNaredbi . '}'
    9 NizNaredbi: NizNaredbi . ';' Naredba

    '}'  shift, and go to state 27
    ';'  shift, and go to state 28


State 18

   10 NizNaredbi: Naredba .

    $default  reduce using rule 10 (NizNaredbi)


State 19

   19 E: num_token .

    $default  reduce using rule 19 (E)


State 20

   21 E: id_token .

    $default  reduce using rule 21 (E)


State 21

   23 PozivFje: call_token . id_token '(' NizE ')'
   24         | call_token . id_token '(' ')'

    id_token  shift, and go to state 29


State 22

   16 E: not_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 30
    PozivFje  go to state 25


State 23

   20 E: '(' . E ')'

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 31
    PozivFje  go to state 25


State 24

   11 Naredba: print_token E .
   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E

    and_token  shift, and go to state 32
    or_token   shift, and go to state 33
    xor_token  shift, and go to state 34
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 11 (Naredba)


State 25

   22 E: PozivFje .

    $default  reduce using rule 22 (E)


State 26

   12 Naredba: set_token id_token . to_token E

    to_token  shift, and go to state 37


State 27

    8 Blok: '{' NizNaredbi '}' .

    $default  reduce using rule 8 (Blok)


State 28

    9 NizNaredbi: NizNaredbi ';' . Naredba

    print_token  shift, and go to state 15
    set_token    shift, and go to state 16

    Naredba  go to state 38


State 29

   23 PozivFje: call_token id_token . '(' NizE ')'
   24         | call_token id_token . '(' ')'

    '('  shift, and go to state 39


State 30

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   16  | not_token E .
   17  | E . shl_token E
   18  | E . shr_token E

    $default  reduce using rule 16 (E)


State 31

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E
   20  | '(' E . ')'

    and_token  shift, and go to state 32
    or_token   shift, and go to state 33
    xor_token  shift, and go to state 34
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36
    ')'        shift, and go to state 40


State 32

   13 E: E and_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 41
    PozivFje  go to state 25


State 33

   14 E: E or_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 42
    PozivFje  go to state 25


State 34

   15 E: E xor_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 43
    PozivFje  go to state 25


State 35

   17 E: E shl_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 44
    PozivFje  go to state 25


State 36

   18 E: E shr_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 45
    PozivFje  go to state 25


State 37

   12 Naredba: set_token id_token to_token . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 46
    PozivFje  go to state 25


State 38

    9 NizNaredbi: NizNaredbi ';' Naredba .

    $default  reduce using rule 9 (NizNaredbi)


State 39

   23 PozivFje: call_token id_token '(' . NizE ')'
   24         | call_token id_token '(' . ')'

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23
    ')'         shift, and go to state 47

    E         go to state 48
    PozivFje  go to state 25
    NizE      go to state 49


State 40

   20 E: '(' E ')' .

    $default  reduce using rule 20 (E)


State 41

   13 E: E . and_token E
   13  | E and_token E .
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E

    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 13 (E)


State 42

   13 E: E . and_token E
   14  | E . or_token E
   14  | E or_token E .
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E

    and_token  shift, and go to state 32
    xor_token  shift, and go to state 34
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 14 (E)


State 43

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   15  | E xor_token E .
   17  | E . shl_token E
   18  | E . shr_token E

    and_token  shift, and go to state 32
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 15 (E)


State 44

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   17  | E shl_token E .
   18  | E . shr_token E

    $default  reduce using rule 17 (E)


State 45

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E
   18  | E shr_token E .

    shl_token  shift, and go to state 35

    $default  reduce using rule 18 (E)


State 46

   12 Naredba: set_token id_token to_token E .
   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E

    and_token  shift, and go to state 32
    or_token   shift, and go to state 33
    xor_token  shift, and go to state 34
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 12 (Naredba)


State 47

   24 PozivFje: call_token id_token '(' ')' .

    $default  reduce using rule 24 (PozivFje)


State 48

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E
   26 NizE: E .

    and_token  shift, and go to state 32
    or_token   shift, and go to state 33
    xor_token  shift, and go to state 34
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 26 (NizE)


State 49

   23 PozivFje: call_token id_token '(' NizE . ')'
   25 NizE: NizE . ',' E

    ')'  shift, and go to state 50
    ','  shift, and go to state 51


State 50

   23 PozivFje: call_token id_token '(' NizE ')' .

    $default  reduce using rule 23 (PozivFje)


State 51

   25 NizE: NizE ',' . E

    num_token   shift, and go to state 19
    id_token    shift, and go to state 20
    call_token  shift, and go to state 21
    not_token   shift, and go to state 22
    '('         shift, and go to state 23

    E         go to state 52
    PozivFje  go to state 25


State 52

   13 E: E . and_token E
   14  | E . or_token E
   15  | E . xor_token E
   17  | E . shl_token E
   18  | E . shr_token E
   25 NizE: NizE ',' E .

    and_token  shift, and go to state 32
    or_token   shift, and go to state 33
    xor_token  shift, and go to state 34
    shl_token  shift, and go to state 35
    shr_token  shift, and go to state 36

    $default  reduce using rule 25 (NizE)
